@@ -1,4 +1,4 @@
 DIST heirloom-070715.tar.bz2 1000080 SHA256 eb33f70bcc019b1d0e0a41f1d7552d45c57a16272e4e1c48634ec3e44496a30f SHA512 0b30b0f4c4c92a10ee2da263ea44666f445d96bac86ca4afb7bbb50d8278986e4145a7bcdf3ed9f75611bb956e93e16fc0e19874498ce3ae1a00e6fbb4f910c9 WHIRLPOOL be19c6833970b343f952f28821dea4f3571f6f348841a23b793ea587be65930a7e5fd41fe0ba2b617be343ea520d626e61cb98b7c42e0fe0e78b423c0be3ab83
-EBUILD heirloom-tools-070715.ebuild 1142 SHA256 b0c9cad888b9f7d5479ce5cc08e626ea5d479c90145a1b774e580b80435c8925 SHA512 48907d4d50a492fd06b929c4720e76b04fe77406278786ac4249fb614c9ebb6021edd8b40d50dfa453c3fea0aa7ccf2328bc89d18e33157182e2b2e157640fe7 WHIRLPOOL a688b3a6e217018233bdc780f1e095a6b89b1124e0f64c8a4432b492b61e9814ed43857416c3bd3d3252e5d2f4776c9e4ba3819a82afc44acf147a1894ab3df0
-MISC ChangeLog 617 SHA256 0df25ae694ae045da2ee2e256fc17bb16e79c2967e5feb04145cc3ace9ec61ec SHA512 a8ed1e15ef49da9f7129772f700a0e2b570d4af107cc86808ecb5732bba61cca740c42dc5fe8cd9b75fe87e30e914568104dabb7f30bab717cc14a33dd306d22 WHIRLPOOL 3f3525bd26c4d31720cea3cd3e9f99a806265ecd6e1a3ca0b96112c65b91fcf139e2becef20f3755ad590934affa8179b83b92c4899c2e67a6a747b0e5b610ae
+EBUILD heirloom-tools-070715.ebuild 1148 SHA256 ff7a39d2d6044c974133e7f95933a45f4f842f72ec0cdd94811ac1338b6c1e1f SHA512 cabf6c5a6972c28771398b081a4a8c39ae56de357dbe12c873aa1cb52ca8fc63140b6b32cf8e3a205653714d686880ee5a9fbe77a2b59c2ace2a3b68f84f4dd9 WHIRLPOOL 87a1bf47faa8ae166a23522eb82999a9d883caec7539709ad8420acb344bb476ba1af60a34897c1fc86ce0d340909c60f48813b1362a9ed483adb850dabb60e9
+MISC ChangeLog 715 SHA256 79497b9f1164e0fee6f4e7cffa1c132b3bf1c43b679aaf30cbc443614f9c3391 SHA512 d3364797f0d4a1060cc7d6744c9068923bc0cf709840ee313affa93cc82b9e5aec4fb90ca5e1d135f1948e5b758700995f034fc43cd9d1ab0f9c8266070ba729 WHIRLPOOL f622d4ed53a9440114a3e5d20b5cc4d7c7ead8b169a5f4cca3c20f14454400dfe7b9f362119da7f4ed9a7cb4775998fd2f43fdc44701441f8eb60af99b32ce92
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
