@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/heirloom-tools/heirloom-tools-070715.ebuild,v 1.3 2013/03/29 06:36:21 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/heirloom-tools/heirloom-tools-070715.ebuild,v 1.4 2013/05/19 12:07:27 patrick Exp $
 
 EAPI="5"
 
@@ -36,7 +36,7 @@ src_install() {
 
 pkg_postinst() {
 	elog "You may want to add /usr/5bin or /usr/ucb to \$PATH"
-	elog "to enable using the apps ofheirloom toolchest by default"
-	elog "Manpages are installed in /usr/share/man/5man/"
-	elog "You may need to set MANPATH to access them"
+	elog "to enable using the apps of heirloom toolchest by default."
+	elog "Man pages are installed in /usr/share/man/5man/"
+	elog "You may need to set \$MANPATH to access them."
 }
