@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/heirloom-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/heirloom-tools/ChangeLog,v 1.3 2013/03/29 06:36:21 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/heirloom-tools/ChangeLog,v 1.4 2013/05/19 12:07:27 patrick Exp $
+
+  19 May 2013; Patrick Lauer <patrick@gentoo.org> heirloom-tools-070715.ebuild:
+  Cosmetic fixes
 
   29 Mar 2013; Patrick Lauer <patrick@gentoo.org> heirloom-tools-070715.ebuild:
   Fix zlib dep #463508
